[package]
name = "dawnorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio-postgres = { version =  "0.7.10" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }