[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawnorm ={ path= "../core" }
dawnorm-codegen ={ path= "../codegen" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-postgres = { version =  "0.7.10" }
